--- a/PAGES/programacao.html
+++ b/PAGES/programacao.html
@@ -34,7 +34,9 @@
         <button type="button" class="raise" id="personalizar"><img class="rgb" src="../IMG/rgb.png" alt="">Mudar
           tema</button>
       </nav>
+        <p class="arredar">Arraste o menu para o lado</p>
     </div>
+    
     <div class="content">
       <div class="separar">
         <div class="topicos">
