--- a/PAGES/faltas.html
+++ b/PAGES/faltas.html
@@ -37,8 +37,9 @@
                 <a href="agenda.html"><button class="raise">Agenda</button></a>
                 <a href="programacao.html"><button class="raise">Programação</button></a>
                 <button type="button" class="raise" id="personalizar"><img class="rgb" src="../IMG/rgb.png" alt="">Mudar tema</button>
-              </nav>
-          </div>
+            </nav>
+                <p class="arredar">Arraste o menu para o lado</p>
+        </div>
 
         <div class="content">
             <!-- Modal de adicionar disciplina -->
