--- a/PAGES/notas.html
+++ b/PAGES/notas.html
@@ -33,6 +33,7 @@
         <a href="programacao.html"><button class="raise">Programação</button></a>
         <button type="button" class="raise" id="personalizar"><img class="rgb" src="../IMG/rgb.png" alt="">Mudar tema</button>
       </nav>
+        <p class="arredar">Arraste o menu para o lado</p>
     </div>
 
     <div class="content">
