--- a/PAGES/agenda.html
+++ b/PAGES/agenda.html
@@ -42,7 +42,7 @@
         <button type="button" class="raise" id="personalizar"><img class="rgb" src="../IMG/rgb.png" alt="">Mudar
           tema</button>
       </nav>
-        <p class="arredar">Arraste o menu para o lado</p>
+        <p class="arredar">Arraste o menu para o lado!</p>
     </div>
 
     <div class="content">
