--- a/PAGES/programacao.html
+++ b/PAGES/programacao.html
@@ -58,7 +58,7 @@
           </div>
           <p class="Ltitle" onclick="togglePython()">
             Python
-            <img class="seta" src="../IMG/acento-circunflexo.png" alt="" />
+            <img class="seta1" src="../IMG/acento-circunflexo.png" alt="" />
           </p>
           <div class="topPython">
             <p class="topis">
@@ -75,7 +75,7 @@
             <p class="topis">Django (para desenvolvimento web)</p>
           </div>
           <p class="Ltitle" onclick="toggleRuby()">
-            Ruby <img class="seta" src="../IMG/acento-circunflexo.png" alt="" />
+            Ruby <img class="seta2" src="../IMG/acento-circunflexo.png" alt="" />
           </p>
           <div class="topRuby">
             <p class="topis">Programação Orientada a Objetos (POO)</p>
@@ -88,7 +88,7 @@
             <p class="topis">Testes (com RSpec, por exemplo)</p>
           </div>
           <p class="Ltitle" onclick="toggleCpp()">
-            C++ <img class="seta" src="../IMG/acento-circunflexo.png" alt="" />
+            C++ <img class="seta3" src="../IMG/acento-circunflexo.png" alt="" />
           </p>
           <div class="topCpp">
             <p class="topis">Programação Orientada a Objetos (POO)</p>
@@ -101,7 +101,7 @@
           </div>
           <p class="Ltitle" onclick="toggleJavaScript()">
             Javascript
-            <img class="seta" src="../IMG/acento-circunflexo.png" alt="" />
+            <img class="seta4" src="../IMG/acento-circunflexo.png" alt="" />
           </p>
           <div class="topJavaScript">
             <p class="topis">Manipulação do DOM</p>
@@ -118,7 +118,7 @@
             <p class="topis">JSON e RESTful APIs</p>
           </div>
           <p class="Ltitle" onclick="togglePHP()">
-            PHP <img class="seta" src="../IMG/acento-circunflexo.png" alt="" />
+            PHP <img class="seta5" src="../IMG/acento-circunflexo.png" alt="" />
           </p>
           <div class="topPHP">
             <p class="topis">Manipulação de Strings</p>
@@ -130,6 +130,7 @@
             <p class="topis">Segurança em PHP</p>
           </div>
         </div>
+        
         <div class="livros">
           <h2>Livros</h2>
           <div class="grid-container">
